# backend

./: .env.example  Dockerfile  README.md  config.py  crud.py  database.py  docker-compose.yml  group.py  main.py  models.py  pyproject.toml  s3.py  schemas.py
.github/workflows/: cd.yaml
app/: config.py  crud.py  database.py  group.py  main.py  map.py  models.py  s3.py  schemas.py
app/src/: mst.py  readers.py  types.py
data/: fires.sql
src/: __init__.py  readers.py
